frontend/test/should_fail/index_exec_edge_isInFromIndexSame_candidate_mismatch.grg
#using "index_exec_model.gm"

sequence s(n:N, i:set<AEdge>, j:int)
{
	{ i=isInEdgesFromIndexSame(n, bari, j) }
}
